[package]
name = "cargo-intraconv"
version = "1.2.0"
authors = ["Alexis Bourget <alexis.bourget@gmail.com>"]
edition = "2018"
description = "A simple helper to transform Markdown links to intra-doc links in Rust projects when appropriate."
license = "MIT"
documentation = "https://github.com/poliorcetics/cargo-intraconv"
homepage = "https://github.com/poliorcetics/cargo-intraconv"
repository = "https://github.com/poliorcetics/cargo-intraconv"
readme = "README.md"
keywords = ["intra-doc-links", "documentation"]
# See https://crates.io/category_slugs.
categories = ["command-line-utilities", "development-tools", "development-tools::cargo-plugins"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
argh = "0.1"
cargo_metadata = "0.12"
glob = "0.3"
lazy_static = "1.4"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5"
